----------------------------------------------------------------------
 OmegaT 4.2.1
----------------------------------------------------------------------
  0 Enhancement
  0 Bug fixes
  0 Localisation updates
----------------------------------------------------------------------
4.2.1 vs 4.2.0


----------------------------------------------------------------------
 OmegaT 4.2.0 (2019-04-23)
----------------------------------------------------------------------
  5 Enhancements
  1 Bug fix
  8 Localisation updates
----------------------------------------------------------------------
4.2.0 vs 4.1.5 update 4

  Implemented requests:

  - Added Apache Ivy to allow fetching external libraries in Groovy scripts
  https://sourceforge.net/p/omegat/feature-requests/1204/

  - Independent colour setting for "enforced" TM matches
  https://sourceforge.net/p/omegat/feature-requests/1395/

  - Java 11 compatibility
  https://sourceforge.net/p/omegat/feature-requests/1436/

  Bug fixes:

  - Plugins classes are only loaded once, even if multiple copies are
  present in the plugins/ folder.

  Other changes:

  - When listing available dictionaries from the net, allow dictionaries with
  only the language code in the name (e.g FR.dic)

  - Added basic autocompletion to the scripting window (Ctrl+Enter to cycle
  through suggestions)

  Localisation Updates:

  - Brazilian Portuguese localisation updated to 4.2.0 (UI, readme)
  - Croatian localisation updated to 4.2.0 (UI, readme)
  - Dutch localisation updated to 4.2.0 (UI, readme)
  - French localisation updated to 4.2.0 (UI, readme)
  - Italian localisation updated to 4.2.0 (UI, readme)
  - Russian localisation updated to 4.2.0 (UI, scripts, readme)
  - Simplified Chinese localisation updated to 4.2.0 (UI, scripts, readme)
  - Turkish localisation updated to 4.2.0 (UI, scripts, readme)

----------------------------------------------------------------------
 OmegaT 4.1.5 update 4 (2019-03-04)