@@ -2662,6 +2662,8 @@ COLOR_MATCHES_INS_INACTIVE=Matches Inserted Inactive
 COLOR_MATCHES_DEL_ACTIVE=Matches Deleted Active
 COLOR_MATCHES_DEL_INACTIVE=Matches Deleted Inactive
 COLOR_HYPERLINK=Hyperlinks
+COLOR_SEARCH_FOUND_MARK=Search Found Mark
+COLOR_SEARCH_REPLACE_MARK=Search Replaced Mark
 COLOR_NOTIFICATION_MIN=Notification (steady)
 COLOR_NOTIFICATION_MAX=Notification (flash)
 COLOR_ALIGNER_ACCEPTED=Aligner "Accepted" Group
